# oleksii-ai-code-pipelines

./: README.md  adk_web_client_patch.py  env.example  list_of_crap.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: test.yml
common/: README.md  __init__.py  constants.py  logging_setup.py  mcp_server.py  rate_limiting.py  retry_runner.py  test_retry_runner.py  tools.py
cursor_prompt_preprocessor/: README.md  __init__.py  agent.py  config.py  demo.py  logging_setup.py  mcp_server.py  rate_limiting.py  session.py  tools.py
multi_agent_loop/: agent.py
potato_decison_with_human_in_the_loop/: agent.py
project_test_summarizer/: README.md  __init__.py  agent.py  config.py  plan.md  session.py  tools.py
test_poc_agent/: agent.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/common/: __init__.py  test_logging_setup.py  test_mcp_server.py  test_rate_limiting.py  test_retry_runner.py  test_tools.py
tests/unit/cursor_prompt_preprocessor/: __init__.py  test_agent.py  test_config.py  test_consolidated_prompt.py
tests/unit/potato_decison_with_human_in_the_loop/: test_agent.py
